feat(delivery-company): Add serializer to delivery company

--- a/app/views/app/purchases/show.html.erb
+++ b/app/views/app/purchases/show.html.erb
@@ -1,2 +1,2 @@
-<purchase-detail :purchase="<%= serialize_resource(@purchase) %>">
+<purchase-detail :purchase="<%= serialize_resource(@set_purchase) %>">
 </purchase-detail>
