feat(view-reviews): list reviews of a product

--- a/app/views/app/items/show.html.erb
+++ b/app/views/app/items/show.html.erb
@@ -1,2 +1,2 @@
-<item-details :item="<%= serialize_resource(@item) %>">
+<item-details :item="<%= serialize_resource(@item) %>" :reviews="<%= serialize_resource(@reviews) %>">
 </item-details>
